--- a/jboss_demo/roles/java-app/tasks/main.yml
+++ b/jboss_demo/roles/java-app/tasks/main.yml
@@ -24,7 +24,7 @@
   mail:
     host: localhost
     port: 25
-    to: Anthony Lin <anthony.lin.test@gmail.com>
+    to: Eleonora Peruch <eperuch@redhat.com>
     subject: Ansible Report for App Deployment
     body: "{{ app_name }} has been successfully deployed with {{ war_file }}"
   delegate_to: localhost
@@ -34,7 +34,7 @@
   mail:
     host: localhost
     port: 25
-    to: Anthony Lin <anthony.lin.test@gmail.com>
+    to: Eleonora Peruch <eperuch@redhat.com>
     subject: Ansible Report for App Upgrade
     body: "{{ app_name }} has been successfully upgraded with {{ war_file }}"
   delegate_to: localhost
