--- a/jboss_demo/deploy-application.yml
+++ b/jboss_demo/deploy-application.yml
@@ -1,7 +1,7 @@
 ---
 # This playbook deploys simple applications to JBoss server
 - name: Deploy Simple Application to JBoss Server
-  hosts: "{{ jboss_server }}"
+  hosts: localhost
   gather_facts: False
 
   roles:
