--- a/jboss_demo/deploy-jboss-as.yml
+++ b/jboss_demo/deploy-jboss-as.yml
@@ -1,7 +1,7 @@
 ---
 # This playbook deploys a simple standalone JBoss 7.1.1 application server
 - name: Deploy Simple Standalone JBoss Application Server
-  hosts: "{{ jboss_server }}"
+  hosts: localhost
   gather_facts: False
 
   roles:
